--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>Latihan 1</h1>
+
+
+<label for="a">Bilangan 1</label> &nbsp;
+<input [(ngModel)]="a" type="text" id="a">
+
+<br>
+
+<label for="a">Bilangan 2</label> &nbsp;
+<input [(ngModel)]="b" type="text" id="b">
+
+<br>
+
+<button type="reset">Clear</button>
+
+
